langtools/test/tools/javac/typeAnnotations/failures/common/innertypeparams/InvalidLocation.out
InvalidLocation.java:10:17: compiler.err.annotation.type.not.applicable
1 error
